--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://mahmoud-barry.github.io/testgp",
   "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
